[gd_scene load_steps=2 format=3 uid="uid://di2s63vl57wwg"]

[ext_resource type="Script" uid="uid://colxknro62u8i" path="res://scenes/battery.gd" id="1_pq2rq"]

[node name="Battery" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_pq2rq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 51.0
offset_right = 165.0
offset_bottom = 55.0
scale = Vector2(4.055, 4.055)

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 9
max_value = 25.0
step = 0.001
show_percentage = false

[node name="ProgressBar2" type="ProgressBar" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 9
min_value = 25.0
max_value = 50.0
step = 0.001
value = 25.0
show_percentage = false

[node name="ProgressBar3" type="ProgressBar" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 9
min_value = 50.0
max_value = 75.0
step = 0.001
value = 50.0
show_percentage = false

[node name="ProgressBar4" type="ProgressBar" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 9
min_value = 75.0
step = 0.001
value = 75.0
show_percentage = false
